Parser/test_cases/good/comparisons.cl
class Test {
  foo:Test;
  bar():Int { {x < 3;x<=3;}};
};
