Parser/test_cases/bad/semicolonmissingexprblock.cl
class Test {
  foo:Test;
  bar(x:Int):Int {{5x;}};
  recover():Int {4};
};
